fixed z-index of menu

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -4,17 +4,11 @@
     width: 100%;
     padding: 20px;
     height: 30px;
-    z-index: 1;
+    z-index: 2;
 
     /* Animations */
     transition-timing-function: ease-in;
     transition: all 0.5s;
-
-    /* background-color: #060b26;
-    height: 80px;
-    display: flex;
-    justify-content: start;
-    align-items: center; */
   }
 
   .nav__black {
@@ -42,6 +36,7 @@
   }
   
   .sidebar__menu {
+    z-index: 1;
     background-color: #111;
     width: 250px;
     height: 100vh;
